examples/kubernetes-on-aws/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: default
  labels:
    app: mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          imagePullPolicy: "IfNotPresent"
          args:
            - "--character-set-server=utf8mb4"
            - "--collation-server=utf8mb4_unicode_ci"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-volumeclaim
              mountPath: /var/lib/mysql
              subPath: mysql
          resources:
            requests:
              cpu: 300m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
  volumeClaimTemplates:
    - metadata:
        name: mysql-volumeclaim
        namespace: default
        labels:
          app: mysql
          group: news-admin
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: default
        resources:
          requests:
            storage: 8Gi
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
