examples/kubernetes-on-aws/wordpress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: default
  labels:
    app: wordpress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:111122223333:certificate/12341234-1234-1234-1234-123412341234
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-public1,subnet-public2
    alb.ingress.kubernetes.io/security-groups: sg-1234, sg-5678
    alb.ingress.kubernetes.io/tags: Owner=Uncharted
    alb.ingress.kubernetes.io/healthcheck-path: /check_server
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=wordpress-lb-access-logs,deletion_protection.enabled=true,routing.http2.enabled=true
spec:
  backend:
    serviceName: wordpress
    servicePort: 80
  rules:
    - host: wordpress.unchartedsky.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
  labels:
    app: wordpress
    group: wordpress
spec:
  selector:
    app: wordpress
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: default
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: wordpress:5.1.1-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-pv-claim
